--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "app.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" , 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.jsx"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
